# agentic-llm

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  analyst_agent.py  base_agent.py  critic_agent.py  orchestrator.py  researcher_agent.py
backend/app/api/: dependencies.py
backend/app/api/routes/: chat.py  eval.py  health.py  ingest.py
backend/app/evaluation/: __init__.py  dataset.py  evaluator.py  report.py
backend/app/evaluation/metrics/: __init__.py  extrinsic.py  intrinsic.py
backend/app/guardrails/: __init__.py  checks.py  monitor.py
backend/app/models/: __init__.py  domain.py  schemas.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  ingestion_pipeline.py  retriever.py  vector_store.py
backend/app/services/: __init__.py  llm_provider.py  logging_service.py
backend/pytest-cache-files-zi57k01_/v/cache/: nodeids
backend/tests/: conftest.py
backend/tests/integration/: test_chat_multi_route.py  test_chat_route.py  test_eval_route.py  test_ingest_routes.py
backend/tests/unit/: test_analyst_agent.py  test_base_agent.py  test_chunking.py  test_critic_agent.py  test_eval_dataset.py  test_eval_metrics.py  test_evaluator.py  test_guardrail_checks.py  test_guardrail_monitor.py  test_health.py  test_ingestion_pipeline.py  test_multi_agent_orchestrator.py  test_orchestrator.py  test_orchestrator_guardrails.py  test_researcher_agent.py  test_retriever.py
frontend/: Dockerfile  README.md  index.html  (+5 more)
(+22 files in other folders)
